# life_service_review_platform

./: .gitignore  CLAUDE.md  README.md
anthropic-skills/: README.md
anthropic-skills/merchant-query/: SKILL.md
anthropic-skills/off-topic/: SKILL.md
anthropic-skills/platform-knowledge/: SKILL.md
anthropic-skills/recommend/: SKILL.md
backend/: Dockerfile  pom.xml
backend/src/main/resources/: application-dev.yml  application-prod.yml  application.yml
backend/src/main/resources/mapper/: DashboardStatsRepository.xml  ReviewRepository.xml  ShopApplyRequestRepository.xml  ShopProductRepository.xml  ShopRepository.xml
backend/src/main/resources/rag/: faq.md
backend/src/main/resources/scripts/: seckill_deduct.lua  seckill_rollback.lua
backend/src/main/resources/sql/: schema.sql
deploy/centos/: README.md  life-review-backend.service  nginx-life-review.conf
frontend/: .env.production.example  index.html  package-lock.json  package.json
frontend/src/api/: http.js
frontend/src/router/: index.js
frontend/src/views/: BlogView.vue  FollowView.vue  LoginView.vue  ProductManageView.vue  ReviewDetailView.vue  ShopDetailView.vue  ShopListView.vue  ShopReviewView.vue  UserProfileView.vue
frontend/src/views/admin/: AdminLayout.vue  DashboardView.vue  ShopAuditView.vue  ShopManageView.vue
mcp-shop-search/: 310  README.md  pyproject.toml
mcp-shop-search/mcp_shop_search/: __init__.py  __main__.py  api_client.py  server.py
scripts/: package-for-centos.ps1
scripts/rag_eval/: README.md  gold.json  rag_recall_eval.py
(+137 files in other folders)
