[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-shop-search"
version = "0.1.0"
description = "MCP server exposing merchant (shop) search via Life Review Platform HTTP API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-shop-search = "mcp_shop_search.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_shop_search"]

[tool.hatch.build.targets.sdist]
include = ["mcp_shop_search"]
